change arabic title font to Jenine-SemiBold

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -154,7 +154,7 @@
 }
 @font-face {
     font-family: "UP-Title";
-    src: url("/public/fonts/Foda-Free-Font.ttf") format("truetype");
+    src: url("/public/fonts/Jenine-SemiBold.otf") format("opentype");
     unicode-range: U+0600-06FF, U+0750-077F, U+FB50-FDFF, U+FE70-FEFF; /* Arabic + forms */
 }
 html {
